; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_iso9660.c_load_sua.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_iso9660.c_load_sua.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_iso9660_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.grub_iso9660_data*, i32, i32, i32)* @load_sua to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @load_sua(%struct.grub_iso9660_data* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.grub_iso9660_data*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.grub_iso9660_data* %0, %struct.grub_iso9660_data** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = call i8* @grub_malloc(i32 %11)
  store i8* %12, i8** %10, align 8
  %13 = load i8*, i8** %10, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  br label %31

16:                                               ; preds = %4
  %17 = load %struct.grub_iso9660_data*, %struct.grub_iso9660_data** %6, align 8
  %18 = getelementptr inbounds %struct.grub_iso9660_data, %struct.grub_iso9660_data* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i8*, i8** %10, align 8
  %24 = call i64 @grub_disk_read(i32 %19, i32 %20, i32 %21, i32 %22, i8* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %16
  %27 = load i8*, i8** %10, align 8
  %28 = call i32 @grub_free(i8* %27)
  store i8* null, i8** %5, align 8
  br label %31

29:                                               ; preds = %16
  %30 = load i8*, i8** %10, align 8
  store i8* %30, i8** %5, align 8
  br label %31

31:                                               ; preds = %29, %26, %15
  %32 = load i8*, i8** %5, align 8
  ret i8* %32
}

declare dso_local i8* @grub_malloc(i32) #1

declare dso_local i64 @grub_disk_read(i32, i32, i32, i32, i8*) #1

declare dso_local i32 @grub_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
